--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 
             <!-- Desktop Nav & Privacy Trigger -->
             <nav class="hidden md:flex items-center gap-8">
-                <a href="/about/index.html" class="text-gray-600 hover:text-emerald-700 transition-colors">Philosophy</a>
-                <a href="/space/index.html" class="text-gray-600 hover:text-emerald-700 transition-colors">Gallery</a>
+                <a href="/about/" class="text-gray-600 hover:text-emerald-700 transition-colors">Philosophy</a>
+                <a href="/space/" class="text-gray-600 hover:text-emerald-700 transition-colors">Gallery</a>
                 
                 <!-- Privacy Dropdown Container -->
                 <div class="relative group">
@@ -550,4 +550,5 @@
 
     </script>
 </body>
+
 </html>
