--- a/about/index.html
+++ b/about/index.html
@@ -66,7 +66,7 @@
         <div class="absolute inset-0 bg-white/90 backdrop-blur-md shadow-sm"></div>
         <div class="container mx-auto px-6 py-4 relative flex justify-between items-center">
             <!-- Logo -->
-            <a href="index.html" class="text-2xl font-bold text-gray-800 tracking-wider flex items-center gap-2 group">
+            <a href="./" class="text-2xl font-bold text-gray-800 tracking-wider flex items-center gap-2 group">
                 <i data-lucide="arrow-left" class="text-emerald-600 group-hover:-translate-x-1 transition-transform"></i>
                 <span class="serif">Back to Home</span>
             </a>
@@ -269,4 +269,5 @@
         window.onload = initThree;
     </script>
 </body>
+
 </html>
